--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -10,6 +10,9 @@
                 <form  th:action="@{'/friends/' + ${userProfile.id}}">
                     <button type="submit">Friends</button>
                 </form>
+                <form th:action="@{/invitations}">
+                    <button type="submit">Invitations</button>
+                </form>
             </div>
             <div class="col-md-6">
                 <h1 th:text="${userProfile.firstName} + ' ' + ${userProfile.lastName}"></h1>
