--- a/src/main/resources/templates/errors.html
+++ b/src/main/resources/templates/errors.html
@@ -8,6 +8,7 @@
     <h1 th:if="${privilege}" th:text="${privilege}"></h1>
     <h1 th:if="${sameUser}" th:text="${sameUser}"></h1>
     <h1 th:if="${haveThisFriend}" th:text="${haveThisFriend}"></h1>
+    <h1 th:if="${invitation}" th:text="${invitation}"></h1>
 </div>
 </body>
 </html>
