--- a/src/main/resources/templates/searchResults.html
+++ b/src/main/resources/templates/searchResults.html
@@ -13,11 +13,6 @@
                     <button class="btn btn-default">Profile</button>
                 </td>
             </form>
-            <!--            <form th:if="${user.id != loggedUserid and friends.contains(user) == false}" th:action="@{'/addfriend/' + ${user.id}}" method="post">
-                            <td>
-                                <button class="btn btn-default">Add to friends</button>
-                            </td>
-                        </form>-->
             <form th:if="${friends.contains(user) == true}" th:action="@{'/deletefriend/' + ${user.id}}" method="post">
                 <td>
                     <button class="btn btn-default">Delete from friends</button>
@@ -29,13 +24,13 @@
                     <button class="btn btn-default" method="get">Send invitation to friends</button>
                 </td>
             </form>
-
-            <!--"-->
-            <!--          <form th:action="@{'/deleteinvitation/' + ${}}">
-                          <td>
-                              <button class="btn btn-default" method="get">Cancel invitation</button>
-                          </td>
-                      </form>-->
+<!--th:if="${receivedInvitations.contains(user) || sendInvitations.contains(user)}" th:action="@{'/deleteinvitation/' + ${sendInvitations.}}"-->
+<!-- th:each="invitation : ${Rinvitations}" th:action="@{'/deleteinvitation/' + ${invitation.id}}"-->
+<!--            <form th:each="invitation : ${Sinvitations} or invitation : ${Rinvitations}" th:action="@{'/deleteinvitations/' + ${invitation.id}}" >
+                <td>
+                    <button class="btn btn-default" method="get">Cancel invitation</button>
+                </td>
+            </form>-->
         </tr>
     </table>
 </div>
