--- a/src/main/resources/templates/invitations.html
+++ b/src/main/resources/templates/invitations.html
@@ -7,14 +7,14 @@
 <div id="content" class="container">
     <h1>Invitations received:</h1>
     <table>
-        <tr th:object="${invitations}" th:each="invitation : ${invitations}">
-            <td th:text="${invitation.getSender.firstName} + ' ' + ${invitation.getSender.lastName}"></td>
-            <form action="#" th:action="@{'/userprofile/' + ${invitation.getSender.id}}" method="get">
+        <tr th:object="${receivedInvitations}" th:each="invitation : ${receivedInvitations}">
+            <td th:text="${invitation.sender.firstName} + ' ' + ${invitation.sender.lastName}"></td>
+            <form action="#" th:action="@{'/userprofile/' + ${invitation.sender.id}}" method="get">
                 <td>
                     <button class="btn btn-default">Profile</button>
                 </td>
             </form>
-            <form th:action="@{'/addfriend/' + ${invitation.getSender.id} + '/' + ${invitation.id}}" method="post">
+            <form th:action="@{'/addfriend/' + ${invitation.sender.id} + '/' + ${invitation.id}}" method="post">
                 <td>
                     <button class="btn btn-default">Accept invitation</button>
                 </td>
