--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -7,7 +7,7 @@
     <div class="existingUser" th:if="${nonExistingUser == null}">
         <div class="row">
             <div class="col-md-3">
-                <form  th:action="@{'/friends/' + ${userProfile.id}}">
+                <form th:action="@{'/friends/' + ${userProfile.id}}">
                     <button type="submit">Friends</button>
                 </form>
                 <form th:if="${loggedUserId == userProfile.id}" th:action="@{/invitations}">
@@ -35,13 +35,20 @@
                                             data-toggle="dropdown"><span
                                             class="caret"></span></button>
                                     <ul class="dropdown-menu">
-                                        <li>
+                                        <li hidden="hidden" class="statusId" th:text="${status.statusId}"></li>
+                                        <li th:if="${loggedUserId} == ${status.addingUser.id}">
+                                            <form th:action="@{'/userprofile/' + ${userProfile.id} + '/editstatus/' + ${status.statusId}}"
+                                                  method="get" id="edit"></form>
+                                            <a href="#" class="editStatus">Edit</a>
+                                        </li>
+                                        <!--onclick="document.getElementById('edit').submit()"-->
+                                        <!--                    <li>
                                             <form th:if="${loggedUserId} == ${status.addingUser.id}"
                                                   th:action="@{'/userprofile/' + ${userProfile.id} + '/editstatus/' + ${status.statusId}}"
                                                   method="get">
                                                 <button class="btn btn-default" type="submit">Edit</button>
                                             </form>
-                                        </li>
+                                        </li>-->
                                         <li>
                                             <form th:if="${loggedUserId} == ${status.userId} or ${loggedUserId} == ${status.addingUser.id}"
                                                   th:action="@{'/userprofile/' + ${userProfile.id} + '/deletestatus/' + ${status.statusId}}"
