--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -35,8 +35,6 @@
                                             data-toggle="dropdown"><span
                                             class="caret"></span></button>
                                     <ul class="dropdown-menu">
-                                        <li hidden="hidden" class="statusId" th:text="${status.statusId}"></li>
-                                        <li hidden="hidden" class="userId" th:text="${userProfile.id}"></li>
                                         <li th:if="${loggedUserId} == ${status.addingUser.id}">
                                             <form th:action="@{'/userprofile/' + ${userProfile.id} + '/editstatus/' + ${status.statusId}}"
                                                   method="get" class="edit"></form>
@@ -44,7 +42,7 @@
                                         </li>
                                         <li th:if="${loggedUserId} == ${status.userId} or ${loggedUserId} == ${status.addingUser.id}">
                                             <form th:action="@{'/userprofile/' + ${userProfile.id} + '/deletestatus/' + ${status.statusId}}"
-                                                    method="post" class="delete"></form>
+                                                  method="post" class="delete"></form>
                                             <a href="#" class="deleteStatus">Delete</a>
                                         </li>
                                     </ul>
@@ -72,16 +70,16 @@
                                                 <li>
                                                     <form th:if="${loggedUserId} == ${comment.addingUser.id}"
                                                           th:action="@{'/userprofile/' + ${userProfile.id} + '/editcomment/' + ${comment.commentId}}"
-                                                          method="get">
-                                                        <button class="btn btn-default" type="submit">Edit</button>
+                                                          method="get" class="editCommentForm">
                                                     </form>
+                                                    <a href="#" class="editComment">Edit</a>
                                                 </li>
                                                 <li>
                                                     <form th:if="${loggedUserId} == ${comment.userId} or ${loggedUserId} == ${comment.addingUser.id}"
                                                           th:action="@{'/userprofile/' + ${userProfile.id} + '/deletecomment/' + ${comment.commentId}}"
-                                                          method="post">
-                                                        <button class="btn btn-default" type="submit">Delete</button>
+                                                          method="post" class="deleteCommentForm">
                                                     </form>
+                                                    <a href="#" class="deleteComment">Delete</a>
                                                 </li>
                                             </ul>
                                         </div>
