--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -8,17 +8,17 @@
         <div class="row">
             <div class="col-md-3">
                 <form th:action="@{'/friends/' + ${userProfile.id}}">
-                    <button type="submit">Friends</button>
+                    <button type="submit" class="btn btn-default">Friends</button>
                 </form>
                 <form th:if="${loggedUserId == userProfile.id}" th:action="@{/invitations}">
-                    <button type="submit">Invitations</button>
+                    <button type="submit" class="btn btn-default">Invitations</button>
                 </form>
             </div>
             <div class="col-md-6">
                 <h1 th:text="${userProfile.firstName} + ' ' + ${userProfile.lastName}"></h1>
                 <div class="add">
                     <form th:action="@{'/userprofile/' + ${userProfile.id}}" th:object="${add}" method="post">
-                        <textarea id="addStatus" rows="4" cols="50" th:field="*{content}"></textarea>
+                        <textarea id="addStatus" rows="4" cols="80" th:field="*{content}"></textarea>
                         <button class="btn btn-default" id="add" type="submit">Add status</button>
                     </form>
                 </div>
