--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -13,6 +13,9 @@
                 <form th:if="${loggedUserId == userProfile.id}" th:action="@{/invitations}">
                     <button type="submit" class="btn btn-default">Invitations</button>
                 </form>
+                <form th:action="@{/message}">
+                    <button type="submit" class="btn btn-default">Send Message</button>
+                </form>
             </div>
             <div class="col-md-6">
                 <h1 th:text="${userProfile.firstName} + ' ' + ${userProfile.lastName}"></h1>
