messages from us showing on left messages to us showing on right

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -76,3 +76,13 @@ textarea {
 .add button {
     clear: left;
 }
+
+.sendMessage {
+    float: left;
+    clear: right;
+}
+
+.receivedMessage {
+    float: right;
+    clear: left;
+}
