--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -18,7 +18,8 @@
         </div>
         <div class="col-md-6">
             <div th:each="message : ${messages}">
-                <p th:text="${message.content}"></p>
+                <p th:if="${message.sender.id} == ${loggedUserId}" class="sendMessage" th:text="${message.content}"></p>
+                <p th:if="${message.sender.id != loggedUserId}" class="receivedMessage" th:text="${message.content}"></p>
             </div>
         </div>
     </div>
