--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -17,6 +17,7 @@
             </ul>
         </div>
         <div class="col-md-6">
+            <h3 th:if="${interlocutor}" th:text="${interlocutor.firstName + ' ' + interlocutor.lastName}"></h3>
             <div th:each="message : ${messages}">
                 <p th:if="${message.sender.id} == ${loggedUserId}" class="sendMessage" th:text="${message.content}"></p>
                 <p th:if="${message.sender.id != loggedUserId}" class="receivedMessage" th:text="${message.content}"></p>
