--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col-md-3">
             <h4>Conversastions</h4>
-            <ul>
+            <ul class="interlocutors">
                 <li th:each="user : ${interlocutors}">
                     <form th:action="@{'/messages/' + ${loggedUserId} + '/' + ${user.id}}" method="get"
                           class="getMessagesForm"></form>
@@ -18,10 +18,14 @@
         </div>
         <div class="col-md-6">
             <h3 th:if="${interlocutor}" th:text="${interlocutor.firstName + ' ' + interlocutor.lastName}"></h3>
-            <div th:each="message : ${messages}">
-                <p th:if="${message.sender.id} == ${loggedUserId}" class="sendMessage" th:text="${message.content}"></p>
-                <p th:if="${message.sender.id != loggedUserId}" class="receivedMessage" th:text="${message.content}"></p>
-            </div>
+            <ul class="messages">
+                <div th:each="message : ${messages}">
+                    <li th:if="${message.sender.id} == ${loggedUserId}" class="sendMessage"
+                        th:text="${message.content}"></li>
+                    <li th:if="${message.sender.id != loggedUserId}" class="receivedMessage"
+                        th:text="${message.content}"></li>
+                </div>
+            </ul>
         </div>
     </div>
 </div>
