--- a/src/main/resources/templates/head.html
+++ b/src/main/resources/templates/head.html
@@ -3,10 +3,10 @@
 <head th:fragment="head">
     <title>Social Portal</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" th:href="@{/external/bootstrap/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" th:href="@{/external/bootstrap/css/bootstrap.css}"/>
     <link rel="stylesheet" th:href="@{/css/style.css}"/>
     <script type="text/javascript" th:src="@{/external/jquery/jquery-3.2.1.js}"></script>
-    <script type="text/javascript" th:src="@{/external/bootstrap/js/bootstrap.min.js}"></script>
+    <script type="text/javascript" th:src="@{/external/bootstrap/js/bootstrap.js}"></script>
     <script type="text/javascript" th:src="@{/js/targeting.js}"></script>
 </head>
 <body>
