--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -34,9 +34,9 @@
                             </div>
                             <div class="pull-right">
                                 <div class="dropdown">
-                                    <button class="btn btn-primary dropdown-toggle menu" type="button"
+                                    <button class="btn btn-default dropdown-toggle menu" type="button"
                                             data-toggle="dropdown"><span
-                                            class="caret"></span></button>
+                                            class="glyphicon glyphicon-option-horizontal"></span></button>
                                     <ul class="dropdown-menu">
                                         <li th:if="${friends.contains(user) == true}">
                                             <form th:action="@{'/deletefriend/' + ${user.id}}"
