--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -80,9 +80,9 @@
                                     </div>
                                     <div class="col-md-1">
                                         <div class="dropdown">
-                                            <button class="btn btn-primary dropdown-toggle menu" type="button"
+                                            <button class="btn btn-default dropdown-toggle menu" type="button"
                                                     data-toggle="dropdown"><span
-                                                    class="caret"></span></button>
+                                                    class="glyphicon glyphicon-option-horizontal"></span></button>
                                             <ul class="dropdown-menu">
                                                 <li>
                                                     <form th:if="${loggedUserId} == ${comment.addingUser.id}"
