--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -59,7 +59,7 @@
                                             <a href="#" class="cancelInvitation">Cancel invitation</a>
                                         </li>
                                         <li>
-                                            <form th:action="@{'/message/' + ${loggedUserId} + '/' + ${user.id}}"
+                                            <form th:action="@{'/message/' + ${user.id}}"
                                                   method="get" class="sendMessageToForm"></form>
                                             <a href="#" class="sendMessageTo">Send Message</a>
                                         </li>
