--- a/src/main/resources/templates/createGroup.html
+++ b/src/main/resources/templates/createGroup.html
@@ -7,10 +7,10 @@
     <div class="row">
         <div class="col-md-3">
         </div>
-        <div class="col-md-9">
+        <div class="col-md-6">
             <input class="form-control" type="text"/>
             <textarea class="groupDescription"></textarea>
-            <button class="btn btn-primary" type="submit"></button>
+            <button class="btn btn-primary" type="submit">Create</button>
         </div>
     </div>
 </body>
