--- a/src/main/resources/templates/groups.html
+++ b/src/main/resources/templates/groups.html
@@ -6,10 +6,12 @@
 <div id="content" class="container">
     <div class="row">
         <div class="col-md-3">
-            <button class="btn btn-default" type="button">Create group</button>
+            <form th:action="@{/creategroup}" method="get">
+                <button class="btn btn-default" type="submit">Create group</button>
+            </form>
         </div>
         <div class="col-md-9">
-            <h1>Your groups:</h1
+            <h1>Your groups:</h1>
             <ul class="groups">
                 <li class="group">
 
